--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test mocha --reporter dot",
     "start": "node server.js",
     "heroku-postbuild": "knex migrate:latest",
-    "nibble": "eslint-nibble db/ migrations/ public/ routes/ seeds/ test/views server.js"
+    "nibble": "eslint-nibble db/ migrations/ public/ routes/ seeds/ test/ views/ server.js"
   },
   "engines": {
     "node": "6.4.0"
@@ -28,7 +28,6 @@
     "ejs": "^2.5.2",
     "eslint-nibble": "^3.1.2",
     "express": "^4.14.0",
-    "express-flash": "0.0.2",
     "knex": "^0.12.2",
     "method-override": "^2.3.6",
     "nodemailer": "^4.0.1",
@@ -36,10 +35,6 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
     "eslint": "^3.19.0",
-    "mocha": "^3.1.0",
-    "morgan": "^1.7.0",
-    "supertest": "^2.0.0"
   }
 }
