--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test mocha --reporter dot",
     "start": "node server.js",
     "heroku-postbuild": "knex migrate:latest",
-    "nibble": "eslint-nibble db/ migrations/ public/ routes/ seeds/ test/ views/ server.js"
+    "nibble": "eslint-nibble db/ migrations/ routes/ seeds/ views/ server.js"
   },
   "engines": {
     "node": "6.4.0"
@@ -35,6 +35,6 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
+    "eslint": "^3.19.0"
   }
 }
