--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test mocha --reporter dot",
     "start": "node server.js",
     "heroku-postbuild": "knex migrate:latest && knex seed:run",
-    "nibble": "eslint-nibble db/ migrations/ routes/ seeds/ views/ server.js"
+    "nibble": "eslint-nibble db/ migrations/ routes/ seeds/ views/ test/ server.js"
   },
   "engines": {
     "node": "6.4.0"
@@ -35,6 +35,9 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.0",
+    "supertest": "^2.0.0"
   }
 }
